--- a/FI.WebAtividadeEntrevista/Views/Shared/_Layout.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Shared/_Layout.cshtml
@@ -42,3 +42,4 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
