--- a/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
@@ -9,6 +9,7 @@
         var urlRetorno = '@Url.Action("Index", "Cliente", new { area = "" })';
         var urlIncluirBeneficiario = '@Url.Action("Incluir", "Beneficiarios")';
         var urlListarBeneficiario = '@Url.Action("ListarPorCliente", "Beneficiarios")';
+        var urlExcluirBeneficiario = '@Url.Action("Excluir", "Beneficiarios")';
 
     </script>
     @Scripts.Render("~/bundles/altClientes")
