feat: Ajustes para editar beneficiário

--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -107,6 +107,8 @@
             </div>
             <div class="modal-body">
                 <form id="formBeneficiarios">
+                    <input type="hidden" id="BeneficiarioID" name="BeneficiarioID" />
+
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
@@ -121,8 +123,9 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <button type="submit" class="btn btn-success">Incluir</button>
+                            <button type="submit" class="btn btn-success" id="btnSalvarBeneficiario">Incluir</button>
                         </div>
+
                     </div>
                 </form>
 
