--- a/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
@@ -10,6 +10,7 @@
         var urlIncluirBeneficiario = '@Url.Action("Incluir", "Beneficiarios")';
         var urlListarBeneficiario = '@Url.Action("ListarPorCliente", "Beneficiarios")';
         var urlExcluirBeneficiario = '@Url.Action("Excluir", "Beneficiarios")';
+        var urlAlterarBeneficiario = '@Url.Action("Alterar", "Beneficiarios")';
 
     </script>
     @Scripts.Render("~/bundles/altClientes")
