feat: excluir clientes

--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -121,11 +121,9 @@
                                 <label for="BeneficiarioNome">Nome do Beneficiário:</label>
                                 <input type="text" class="form-control" id="BeneficiarioNome" placeholder="Ex.: Maria" maxlength="255" required>
                             </div>
-                        </div>
-                        <div class="col-md-4">
+                        </div><div class="col-md-4" style="margin-top: 2.5rem">
                             <button type="submit" class="btn btn-success" id="btnSalvarBeneficiario">Incluir</button>
                         </div>
-
                     </div>
                 </form>
 
